chore: remove updates column from entities table and fix layout shift bug

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -845,7 +845,7 @@
                   </section>
 
                   <!-- ===============================================-->
-                  <!--    Entites-->
+                  <!--    Entities-->
                   <!-- ===============================================-->
 
                   <section id="list-item-2">
@@ -953,9 +953,6 @@
                               Address
                             </th>
                             <th class="text-900 sort" data-sort="feed">Feed</th>
-                            <th class="text-900 sort" data-sort="quantity">
-                              Updates
-                            </th>
                             <th class="text-900 sort" data-sort="unitPrice">
                               Action
                             </th>
@@ -1095,20 +1092,6 @@
                               </div>
                             </td>
 
-                            <td class="quantity" data-title="Updates">
-                              <div class="form-group">
-                                <select
-                                  class="form-select selectpicker"
-                                  id="multiple-select-01"
-                                  multiple="multiple"
-                                  data-options='{"placeholder":"Select options"}'
-                                >
-                                  <option>Personal Update</option>
-                                  <option>Scheduling Update</option>
-                                  <option>Invoice Update</option>
-                                </select>
-                              </div>
-                            </td>
                             <td
                               class="align-middle white-space-nowrap actions"
                               data-title="Actions"
@@ -1270,20 +1253,6 @@
                               </div>
                             </td>
 
-                            <td class="quantity" data-title="Updates">
-                              <div class="form-group">
-                                <select
-                                  class="form-select selectpicker"
-                                  id="multiple-select-02"
-                                  multiple="multiple"
-                                  data-options='{"placeholder":"Select options"}'
-                                >
-                                  <option>Personal Update</option>
-                                  <option>Scheduling Update</option>
-                                  <option>Invoice Update</option>
-                                </select>
-                              </div>
-                            </td>
                             <td
                               class="align-middle white-space-nowrap actions"
                               data-title="Actions"
@@ -1442,20 +1411,6 @@
                               </div>
                             </td>
 
-                            <td class="quantity" data-title="Updates">
-                              <div class="form-group">
-                                <select
-                                  class="form-select selectpicker"
-                                  id="multiple-select-03"
-                                  multiple="multiple"
-                                  data-options='{"placeholder":"Select options"}'
-                                >
-                                  <option>Personal Update</option>
-                                  <option>Scheduling Update</option>
-                                  <option>Invoice Update</option>
-                                </select>
-                              </div>
-                            </td>
                             <td
                               class="align-middle white-space-nowrap actions"
                               data-title="Actions"
@@ -1615,20 +1570,6 @@
                               </div>
                             </td>
 
-                            <td class="quantity" data-title="Updates">
-                              <div class="form-group">
-                                <select
-                                  class="form-select selectpicker"
-                                  id="multiple-select-04"
-                                  multiple="multiple"
-                                  data-options='{"placeholder":"Select options"}'
-                                >
-                                  <option>Personal Update</option>
-                                  <option>Scheduling Update</option>
-                                  <option>Invoice Update</option>
-                                </select>
-                              </div>
-                            </td>
                             <td
                               class="align-middle white-space-nowrap actions"
                               data-title="Actions"
@@ -1786,20 +1727,6 @@
                               </div>
                             </td>
 
-                            <td class="quantity" data-title="Updates">
-                              <div class="form-group">
-                                <select
-                                  class="form-select selectpicker"
-                                  id="multiple-select-05"
-                                  multiple="multiple"
-                                  data-options='{"placeholder":"Select options"}'
-                                >
-                                  <option>Personal Update</option>
-                                  <option>Scheduling Update</option>
-                                  <option>Invoice Update</option>
-                                </select>
-                              </div>
-                            </td>
                             <td
                               class="align-middle white-space-nowrap actions"
                               data-title="Actions"
