fix: side panel overflow issue

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -5024,7 +5024,6 @@
       <!--    customization and left vertical sidebar section -->
       <!-- ===============================================-->
 
-      <!-- class="bg-body-emphasis left-sticky-nav d-none d-lg-flex flex-column align-items-lg-start" -->
       <nav
         id="left-nav-bar"
         class="bg-body-emphasis left-nav-bar position-fixed position-lg-static d-flex flex-column align-items-start"
@@ -5049,7 +5048,7 @@
               </div>
             </a>
             <div
-              class="dropdown-menu dropdown-caret dropdown-caret dropdown-menu-end py-0"
+              class="dropdown-menu dropdown-caret dropdown-caret dropdown-menu-end py-0 mt-3"
               aria-labelledby="sidebardropdownuser"
             >
               <div class="bg-white dark__bg-1000 rounded-2 py-2">
@@ -5076,70 +5075,70 @@
               </div>
             </div>
           </li>
-          <li class="bg-primary-subtle text-primary">
-            <div class="dropstart theme-control-dropdown">
-              <a
-                class="theme-switch-dropdown nav-link hide-dropdown-caret d-flex align-items-center dropdown-toggle fa-icon-wait fs-9 pe-1 py-0"
-                href="#"
-                role="button"
-                id="themeSwitchDropdown-side"
-                data-bs-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-                ><span
-                  class="fas fa-sun fs-7"
-                  data-fa-transform="shrink-2"
-                  data-theme-dropdown-toggle-icon="light"
-                ></span
-                ><span
-                  class="fas fa-moon fs-7"
-                  data-fa-transform="shrink-3"
-                  data-theme-dropdown-toggle-icon="dark"
-                ></span
-                ><span
-                  class="fas fa-adjust fs-7"
-                  data-fa-transform="shrink-2"
-                  data-theme-dropdown-toggle-icon="auto"
-                ></span
-              ></a>
-              <div
-                class="dropdown-menu dropdown-menu-end dropdown-caret border py-0 mt-3"
-                aria-labelledby="themeSwitchDropdown-side"
-              >
-                <div class="bg-white dark__bg-1000 rounded-2 py-2">
-                  <button
-                    class="dropdown-item d-flex align-items-center gap-2"
-                    type="button"
-                    value="light"
-                    data-theme-control="theme"
-                  >
-                    <span class="fas fa-sun"></span>Light<span
-                      class="fas fa-check dropdown-check-icon ms-auto text-600"
-                    ></span>
-                  </button>
-                  <button
-                    class="dropdown-item d-flex align-items-center gap-2"
-                    type="button"
-                    value="dark"
-                    data-theme-control="theme"
-                  >
-                    <span class="fas fa-moon" data-fa-transform=""></span
-                    >Dark<span
-                      class="fas fa-check dropdown-check-icon ms-auto text-600"
-                    ></span>
-                  </button>
-                  <button
-                    class="dropdown-item d-flex align-items-center gap-2"
-                    type="button"
-                    value="auto"
-                    data-theme-control="theme"
-                  >
-                    <span class="fas fa-adjust" data-fa-transform=""></span
-                    >Auto<span
-                      class="fas fa-check dropdown-check-icon ms-auto text-600"
-                    ></span>
-                  </button>
-                </div>
+          <li
+            class="bg-primary-subtle text-primary dropstart theme-control-dropdown"
+          >
+            <a
+              class="theme-switch-dropdown nav-link hide-dropdown-caret d-flex align-items-center dropdown-toggle fa-icon-wait fs-9 pe-1 py-0"
+              href="#"
+              role="button"
+              id="themeSwitchDropdown-side"
+              data-bs-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              ><span
+                class="fas fa-sun fs-7"
+                data-fa-transform="shrink-2"
+                data-theme-dropdown-toggle-icon="light"
+              ></span
+              ><span
+                class="fas fa-moon fs-7"
+                data-fa-transform="shrink-3"
+                data-theme-dropdown-toggle-icon="dark"
+              ></span
+              ><span
+                class="fas fa-adjust fs-7"
+                data-fa-transform="shrink-2"
+                data-theme-dropdown-toggle-icon="auto"
+              ></span
+            ></a>
+            <div
+              class="dropdown-menu dropdown-menu-end dropdown-caret border py-0 mt-3"
+              aria-labelledby="themeSwitchDropdown-side"
+            >
+              <div class="bg-white dark__bg-1000 rounded-2 py-2">
+                <button
+                  class="dropdown-item d-flex align-items-center gap-2"
+                  type="button"
+                  value="light"
+                  data-theme-control="theme"
+                >
+                  <span class="fas fa-sun"></span>Light<span
+                    class="fas fa-check dropdown-check-icon ms-auto text-600"
+                  ></span>
+                </button>
+                <button
+                  class="dropdown-item d-flex align-items-center gap-2"
+                  type="button"
+                  value="dark"
+                  data-theme-control="theme"
+                >
+                  <span class="fas fa-moon" data-fa-transform=""></span
+                  >Dark<span
+                    class="fas fa-check dropdown-check-icon ms-auto text-600"
+                  ></span>
+                </button>
+                <button
+                  class="dropdown-item d-flex align-items-center gap-2"
+                  type="button"
+                  value="auto"
+                  data-theme-control="theme"
+                >
+                  <span class="fas fa-adjust" data-fa-transform=""></span
+                  >Auto<span
+                    class="fas fa-check dropdown-check-icon ms-auto text-600"
+                  ></span>
+                </button>
               </div>
             </div>
           </li>
