--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -148,9 +148,17 @@
           <div class="content">
             <div class="row justify-content-md-center">
               <nav
-                class="navbar navbar-light navbar-glass navbar-top navbar-expand-lg navbar-overrides"
+                class="navbar navbar-light navbar-glass navbar-top navbar-expand-lg navbar-overrides gap-lg-3"
                 aria-label="top nav bar"
               >
+                <!--this input handle the state of the search bar hide/show function-->
+                <input
+                  type="checkbox"
+                  id="main-nav-search"
+                  class="main-nav-search sr-only"
+                  hidden
+                />
+
                 <button
                   class="btn navbar-toggler-humburger-icon navbar-toggler me-1 me-sm-3"
                   type="button"
@@ -166,12 +174,12 @@
                 </button>
                 <a
                   aria-label="glassma logo"
-                  class="navbar-brand me-1 me-sm-3"
+                  class="navbar-brand me-1 me-sm-3 me-lg-0"
                   href="../index.html"
                 >
                   <div class="d-flex align-items-center">
                     <img
-                      class="me-2"
+                      class="me-2 me-lg-0"
                       src="../assets/img/logos/glassmalogo.webp"
                       alt=""
                       width="200"
@@ -423,11 +431,257 @@
                 </div>
 
                 <ul
-                  class="navbar-nav navbar-nav-icons ms-auto flex-row align-items-center"
+                  class="navbar-nav navbar-nav-icons flex-row"
                   aria-label="search"
                 >
                   <li>
-                    <i class="fs-8 fas fa-search"></i>
+                    <div
+                      class="search-box"
+                      data-list='{"valueNames":["title"]}'
+                    >
+                      <form
+                        class="position-relative"
+                        data-bs-toggle="search"
+                        data-bs-display="static"
+                      >
+                        <input
+                          class="form-control search-input fuzzy-search"
+                          type="search"
+                          placeholder="Search..."
+                          aria-label="Search"
+                        />
+                        <label
+                          class="d-contents search-label-icon"
+                          for="main-nav-search"
+                        >
+                          <span class="fas fa-search search-box-icon"></span>
+                        </label>
+                      </form>
+                      <div
+                        class="btn-close-falcon-container position-absolute end-0 top-50 translate-middle shadow-none"
+                        data-bs-dismiss="search"
+                      >
+                        <button
+                          class="btn btn-link btn-close-falcon p-0"
+                          aria-label="Close"
+                        ></button>
+                      </div>
+                      <div
+                        class="dropdown-menu border font-base start-0 mt-2 py-0 overflow-hidden w-100"
+                      >
+                        <div
+                          class="scrollbar list py-3"
+                          style="max-height: 24rem"
+                        >
+                          <h6
+                            class="dropdown-header fw-medium text-uppercase px-x1 fs-11 pt-0 pb-2"
+                          >
+                            Recently Browsed
+                          </h6>
+                          <a
+                            class="dropdown-item fs-10 px-x1 py-1 hover-primary"
+                            href="../app/events/event-detail.html"
+                          >
+                            <div class="d-flex align-items-center">
+                              <span
+                                class="fas fa-circle me-2 text-300 fs-11"
+                              ></span>
+                              <div class="fw-normal title">
+                                Pages
+                                <span
+                                  class="fas fa-chevron-right mx-1 text-500 fs-11"
+                                  data-fa-transform="shrink-2"
+                                ></span>
+                                Events
+                              </div>
+                            </div>
+                          </a>
+                          <a
+                            class="dropdown-item fs-10 px-x1 py-1 hover-primary"
+                            href="../app/e-commerce/customers.html"
+                          >
+                            <div class="d-flex align-items-center">
+                              <span
+                                class="fas fa-circle me-2 text-300 fs-11"
+                              ></span>
+                              <div class="fw-normal title">
+                                E-commerce
+                                <span
+                                  class="fas fa-chevron-right mx-1 text-500 fs-11"
+                                  data-fa-transform="shrink-2"
+                                ></span>
+                                Customers
+                              </div>
+                            </div>
+                          </a>
+                          <hr class="text-200 dark__text-900" />
+                          <h6
+                            class="dropdown-header fw-medium text-uppercase px-x1 fs-11 pt-0 pb-2"
+                          >
+                            Suggested Filter
+                          </h6>
+                          <a
+                            class="dropdown-item px-x1 py-1 fs-9"
+                            href="../app/e-commerce/customers.html"
+                          >
+                            <div class="d-flex align-items-center">
+                              <span
+                                class="badge fw-medium text-decoration-none me-2 badge-subtle-warning"
+                                >customers:</span
+                              >
+                              <div class="flex-1 fs-10 title">
+                                All customers list
+                              </div>
+                            </div>
+                          </a>
+                          <a
+                            class="dropdown-item px-x1 py-1 fs-9"
+                            href="../app/events/event-detail.html"
+                          >
+                            <div class="d-flex align-items-center">
+                              <span
+                                class="badge fw-medium text-decoration-none me-2 badge-subtle-success"
+                                >events:</span
+                              >
+                              <div class="flex-1 fs-10 title">
+                                Latest events in current month
+                              </div>
+                            </div>
+                          </a>
+                          <a
+                            class="dropdown-item px-x1 py-1 fs-9"
+                            href="../app/e-commerce/product/product-grid.html"
+                          >
+                            <div class="d-flex align-items-center">
+                              <span
+                                class="badge fw-medium text-decoration-none me-2 badge-subtle-info"
+                                >products:</span
+                              >
+                              <div class="flex-1 fs-10 title">
+                                Most popular products
+                              </div>
+                            </div>
+                          </a>
+                          <hr class="text-200 dark__text-900" />
+                          <h6
+                            class="dropdown-header fw-medium text-uppercase px-x1 fs-11 pt-0 pb-2"
+                          >
+                            Files
+                          </h6>
+                          <a class="dropdown-item px-x1 py-2" href="#!">
+                            <div class="d-flex align-items-center">
+                              <div class="file-thumbnail me-2">
+                                <img
+                                  class="border h-100 w-100 object-fit-cover rounded-3"
+                                  src="../assets/img/products/3-thumb.png"
+                                  alt=""
+                                />
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0 title">iPhone</h6>
+                                <p class="fs-11 mb-0 d-flex">
+                                  <span class="fw-semi-bold">Antony</span
+                                  ><span class="fw-medium text-600 ms-2"
+                                    >27 Sep at 10:30 AM</span
+                                  >
+                                </p>
+                              </div>
+                            </div>
+                          </a>
+                          <a class="dropdown-item px-x1 py-2" href="#!">
+                            <div class="d-flex align-items-center">
+                              <div class="file-thumbnail me-2">
+                                <img
+                                  class="img-fluid"
+                                  src="../assets/img/icons/zip.png"
+                                  alt=""
+                                />
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0 title">Falcon v1.8.2</h6>
+                                <p class="fs-11 mb-0 d-flex">
+                                  <span class="fw-semi-bold">John</span
+                                  ><span class="fw-medium text-600 ms-2"
+                                    >30 Sep at 12:30 PM</span
+                                  >
+                                </p>
+                              </div>
+                            </div>
+                          </a>
+                          <hr class="text-200 dark__text-900" />
+                          <h6
+                            class="dropdown-header fw-medium text-uppercase px-x1 fs-11 pt-0 pb-2"
+                          >
+                            Members
+                          </h6>
+                          <a
+                            class="dropdown-item px-x1 py-2"
+                            href="../pages/user/profile.html"
+                          >
+                            <div class="d-flex align-items-center">
+                              <div class="avatar avatar-l status-online me-2">
+                                <img
+                                  class="rounded-circle"
+                                  src="../assets/img/team/1.jpg"
+                                  alt=""
+                                />
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0 title">Anna Karinina</h6>
+                                <p class="fs-11 mb-0 d-flex">
+                                  Technext Limited
+                                </p>
+                              </div>
+                            </div>
+                          </a>
+                          <a
+                            class="dropdown-item px-x1 py-2"
+                            href="../pages/user/profile.html"
+                          >
+                            <div class="d-flex align-items-center">
+                              <div class="avatar avatar-l me-2">
+                                <img
+                                  class="rounded-circle"
+                                  src="../assets/img/team/2.jpg"
+                                  alt=""
+                                />
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0 title">Antony Hopkins</h6>
+                                <p class="fs-11 mb-0 d-flex">Brain Trust</p>
+                              </div>
+                            </div>
+                          </a>
+                          <a
+                            class="dropdown-item px-x1 py-2"
+                            href="../pages/user/profile.html"
+                          >
+                            <div class="d-flex align-items-center">
+                              <div class="avatar avatar-l me-2">
+                                <img
+                                  class="rounded-circle"
+                                  src="../assets/img/team/3.jpg"
+                                  alt=""
+                                />
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0 title">Emma Watson</h6>
+                                <p class="fs-11 mb-0 d-flex">Google</p>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                        <div class="text-center mt-n3">
+                          <p class="fallback fw-bold fs-8 d-none">
+                            No Result Found.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <label for="main-nav-search">
+                      <i class="fs-8 fas fa-search"></i>
+                    </label>
                   </li>
                 </ul>
 
