--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -5362,36 +5362,38 @@
             >
               <div class="bg-white dark__bg-1000 rounded-2 py-2">
                 <button
-                  class="dropdown-item d-flex align-items-center gap-2"
+                  class="dropdown-item d-flex align-items-center gap-2 flex-row"
                   type="button"
                   value="light"
                   data-theme-control="theme"
                 >
-                  <span class="fas fa-sun"></span>Light<span
-                    class="fas fa-check dropdown-check-icon ms-auto text-600"
-                  ></span>
+                  <span class="fas fa-sun"></span>Light
+                  <!--                  <span-->
+                  <!--                    class="fas fa-check dropdown-check-icon ms-auto text-600"-->
+                  <!--                  ></span>-->
                 </button>
                 <button
-                  class="dropdown-item d-flex align-items-center gap-2"
+                  class="dropdown-item d-flex align-items-center gap-2 flex-row"
                   type="button"
                   value="dark"
                   data-theme-control="theme"
                 >
-                  <span class="fas fa-moon" data-fa-transform=""></span
-                  >Dark<span
-                    class="fas fa-check dropdown-check-icon ms-auto text-600"
-                  ></span>
+                  <span class="fas fa-moon" data-fa-transform=""></span>
+                  Dark
+                  <!--                  <span-->
+                  <!--                    class="fas fa-check dropdown-check-icon ms-auto text-600"-->
+                  <!--                  ></span>-->
                 </button>
                 <button
-                  class="dropdown-item d-flex align-items-center gap-2"
+                  class="dropdown-item d-flex align-items-center gap-2 flex-row"
                   type="button"
                   value="auto"
                   data-theme-control="theme"
                 >
-                  <span class="fas fa-adjust" data-fa-transform=""></span
-                  >Auto<span
-                    class="fas fa-check dropdown-check-icon ms-auto text-600"
-                  ></span>
+                  <span class="fas fa-adjust" data-fa-transform=""></span>Auto
+                  <!--                  <span-->
+                  <!--                    class="fas fa-check dropdown-check-icon ms-auto text-600"-->
+                  <!--                  ></span>-->
                 </button>
               </div>
             </div>
@@ -5528,7 +5530,7 @@
               ></button>
             </div>
           </header>
-          <div class="card-body fs-10 p-0">
+          <div class="scrollbar card-body fs-10 p-0">
             <a
               class="border-bottom-0 notification rounded-0 border-x-0 border-300"
               href="#!"
