fix: main content and customize scrolling issue

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -5861,7 +5861,7 @@
             </div>
           </header>
           <section
-            class="offcanvas-body scrollbar-overlay bg-primary-subtle px-x1 h-100"
+            class="offcanvas-body scrollbar scrollbar-overlay bg-primary-subtle px-x1 h-100"
             id="themeController"
           >
             <h5 class="fs-9">Color Scheme</h5>
