chore: added sf and lb in mobile/tablet devices

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -6300,8 +6300,8 @@
                         <th class="hide-mobile">Piece #</th>
                         <th>Width (in)</th>
                         <th>Height (in)</th>
-                        <th class="hide-mobile">SF</th>
-                        <th class="hide-mobile">LIB</th>
+                        <th class="">SF</th>
+                        <th class="">LIB</th>
                         <th class="glass-type-h">Glass Type</th>
                         <!-- <th class="hide-mobile">Price/Sq Ft ($)</th>-->
                         <th class="hide-mobile pricePerSqft-h">Price</th>
@@ -6326,10 +6326,10 @@
                             placeholder="e.g., 48"
                           />
                         </td>
-                        <td class="sf hide-mobile">
+                        <td class="sf ">
                           <span class="td-placeholder">0 (1/8)</span>
                         </td>
-                        <td class="lib hide-mobile">
+                        <td class="lib ">
                           <span class="td-placeholder">0 (1)</span>
                         </td>
                         <td>
@@ -22435,10 +22435,10 @@
               <td class="hide-mobile">${rowCount}</td>
               <td><input type="text" class="width" placeholder="e.g., 36"></td>
               <td><input type="text" class="height" placeholder="e.g., 48"></td>
-              <td class="sf hide-mobile">
+              <td class="sf ">
                 <span class="td-placeholder">0 (1/8)</span>
               </td>
-              <td class="lib hide-mobile">
+              <td class="lib ">
                 <span class="td-placeholder">0 (1)</span>
               </td>
               <td>
