chore: connect email to the content

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -9876,7 +9876,7 @@
               <!-- email content area -->
               <article
                 id="email-contents"
-                class="card d-flex flex-column gap-4 email-content"
+                class="card email-content"
               >
                 <div id="email-1" class="inactive-state">
                   <header class="card email-content-header border-bottom">
